# sale_agent

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
app/: __init__.py  main.py
app/api/: webhook.py
app/core/: config.py
app/models/: product.py
app/services/: search.py  shopify.py  whatsapp.py
app/services/providers/: base.py  meta.py  twilio.py
scripts/: build_index.py  fetch_catalogue.py  search.py
